# backend

./: .gitignore  .gitmodules  gel.toml  main.py  manual-summarization.py  pyproject.toml  pytest.ini  renovate.json  review.py
.github/workflows/: test.yml
dbschema/: comment.gel  default.gel  paper.gel
dbschema/migrations/: 00001-m1w4qms.edgeql  00002-m1oehni.edgeql  00003-m1ogwe4.edgeql  00004-m1b7mlh.edgeql  00005-m1jsjw7.edgeql  00006-m1lltvn.edgeql  00007-m1u7njh.edgeql  00008-m1bwum7.edgeql  00009-m1ngayh.edgeql  00010-m1cxyya.edgeql  00011-m146app.edgeql  00012-m1znlld.edgeql  00013-m1o555k.edgeql  00014-m1xjfco.edgeql  00015-m1sgvxj.edgeql  00016-m1pup7n.edgeql  00017-m1y5pz6.edgeql  00018-m13svz7.edgeql  00019-m1wccxl.edgeql  00020-m1cmmso.edgeql  00021-m1l4ach.edgeql  00022-m16hffz.edgeql  00023-m1tx56k.edgeql  00024-m1eoar2.edgeql  00025-m1twbhk.edgeql
libraries/: arxiv.py  auth.py  db.py  email.py  initalizer.py  jwt.py  paper.py  post_generator.py  recommend.py  reviewer.py
prompts/: post.txt
queries/: get_paper.edgeql  get_paper_async_edgeql.py  get_papers.edgeql  get_papers_async_edgeql.py  get_user_async_edgeql.py  insert_paper.edgeql  insert_paper_async_edgeql.py  insert_user_async_edgeql.py  update_hash.edgeql  update_hash_async_edgeql.py
queries/cache/: __init__.py  gc_cache.edgeql  gc_cache_async_edgeql.py  get_cache.edgeql  get_cache_async_edgeql.py  insert_cache.edgeql  insert_cache_async_edgeql.py
queries/comment/: __init__.py  delete_comment.edgeql  delete_comment_async_edgeql.py  delete_reaction.edgeql  (+9 more)
routers/: comment.py  oauth.py  post.py  posts.py  user.py
tests/: test_arxiv.py  test_comment.py  test_post.py  test_user.py
tests_temp/: test_comment.py  test_user.py
(+61 files in other folders)
