[project]
name = "scholub"
version = "0.1.0"
description = "Backend of scholub"
readme = "README.md"
requires-python = ">=3.13.3"
dependencies = [
  "apscheduler==3.11.0",
  "argon2-cffi==25.1.0",
  "arxiv==2.2.0",
  "authlib==1.6.0",
  "fastapi[standard]==0.115.13",
  "gel==3.1.0",
  "itsdangerous==2.2.0",
  "numpy==2.3.0",
  "openai==1.88.0",
  "pydantic==2.11.7",
  "pyjwt==2.10.1",
  "pypdf==5.6.0",
  "pytest-asyncio==1.0.0",
  "python-dotenv==1.1.0",
  "satellite-py==0.1.9",
  "scikit-learn==1.7.0",
]

[dependency-groups]
dev = [
  "pytest==8.4.1",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.per-file-ignores]
"queries/*" = ["F403", "I"]

[tool.basedpyright]
exclude = ["queries/*"]

